Update User Answer

--- a/public/style/user.css
+++ b/public/style/user.css
@@ -23,3 +23,13 @@
     background-color: yellow;
     color: black;
 }
+
+.highlight-correct {
+    background-color: green;
+    color: white;
+}
+
+.highlight-wrong {
+    background-color: tomato;
+    color: white;
+}
